--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>
   {% block titleblock %}
-  {% block titleblock %}
+  {% block titleblock %} | jadibuti
 
   <!-- Latest compiled and minified CSS -->
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" cross\
@@ -9,7 +9,6 @@
 
   {% block styles %}
   {% endblock styles %}
-
 
 </title>
 <style>
