modified and changed templates

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -1,4 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'base_template.html' %}
+
+{% block titleblock %}
+{{ page_title }}
+{% endblock titleblock %}
 
 
 {% block main %}
