--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,5 @@
-<div class="navbar navbar-inverse">
-
-</div>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    Home | Browse | Blog
+  </div>
+</nav>
