--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -1,8 +1,10 @@
 <html>
 <head><title>
   {% block titleblock %}
-  {% block titleblock %} | jadibuti
+  {% endblock titleblock %} | jadibuti
+</title>
 
+<style>
   <!-- Latest compiled and minified CSS -->
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" cross\
  origin="anonymous">
@@ -10,20 +12,18 @@
   {% block styles %}
   {% endblock styles %}
 
-</title>
-<style>
-  {% block styleblock %}
-  {% endblock styleblock %}
-<body>
-  {% include 'navbar.html' }
-  {% block page_header %}
+</style>
 
+<body>
+  {% include 'navbar.html' %}
+
+  {% block page_header %}
   {% endblock page_header %}
 
   {% block main %}
   {% endblock main %}
 
-  {% include 'footer.html' }
+  {% include 'footer.html' %}
 
   {% block scripts %}
   {% endblock scripts %}
