--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,46 @@
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    Home | Browse | Blog
-  </div>
-</nav>
+<nav class="navbar navbar-default navbar-static-top">
+<div class="container">
+
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="{% url 'home' %}">Jadibuti</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+        <ul class="nav navbar-nav">
+            <li><a href="">Browse Herbs</a></li>
+            <li><a href="">Natural Remedies</a></li>
+        </ul>
+
+        <form class="navbar-form navbar-left" role="search">
+            <div class="input-group">
+                <input type="search" class="form-control" placeholder="Search">
+                <span class="input-group-btn">
+                    <button class="btn btn-default" type="button">
+                        <span class="glyphicon glyphicon-search"></span>
+                    </button>
+                </span>
+            </div>
+        </form>
+
+        <ul class="nav navbar-nav navbar-right">
+            {% if request.user.is_authenticated %}
+                <li><a href="">Logout</a></li>
+            {% else %}
+                <li><a href="">Login</a></li>
+                <li><a href="">Register</a></li>
+            {% endif %}
+        </ul>
+
+    </div><!--collapse-->
+
+</div><!--container-->
+</nav><!--navbar-->
