--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
 
   <!-- bootstrap css -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{% static 'css/default.css' %}">
   {% block styles %}
   {% endblock styles %}
 </head>
