--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="nav1">
 
         <ul class="nav navbar-nav">
             <li><a href="">Browse Herbs</a></li>
@@ -24,7 +24,7 @@
             <div class="input-group">
                 <input type="search" class="form-control" placeholder="Search">
                 <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">
+                    <button class="btn btn-default" type="submit">
                         <span class="glyphicon glyphicon-search"></span>
                     </button>
                 </span>
@@ -33,7 +33,16 @@
 
         <ul class="nav navbar-nav navbar-right">
             {% if request.user.is_authenticated %}
-                <li><a href="">Logout</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        {{ request.user.first_name}} {{ request.user.last_name }} <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#"><i class="glyphicon glyphicon-user"></i> Profile</a></li>
+                        <!--<li role="separator" class="divider"></li>-->
+                        <li><a href="#"><i class="glyphicon glyphicon-log-out"></i> Logout</a></li>
+                    </ul>
+                </li>
             {% else %}
                 <li><a href="">Login</a></li>
                 <li><a href="">Register</a></li>
