login logout done

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   {% block meta %}
   {% endblock meta %}
 
-  <title>{% block titleblock %}{% endblock titleblock %} | Jadibuti</title>
+  <title>{% block page_title %}{% endblock page_title %} | Jadibuti</title>
 
   <!-- bootstrap css -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
