--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
 
-{% block titleblock %}
-{{ page_title }}
-{% endblock titleblock %}
+{% block page_title %}Home{% endblock %}
 
 
 {% block main %}
