--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -40,11 +40,11 @@
                     <ul class="dropdown-menu">
                         <li><a href="#"><i class="glyphicon glyphicon-user"></i> Profile</a></li>
                         <!--<li role="separator" class="divider"></li>-->
-                        <li><a href="#"><i class="glyphicon glyphicon-log-out"></i> Logout</a></li>
+                        <li><a href="{% url 'logout' %}"><i class="glyphicon glyphicon-log-out"></i> Logout</a></li>
                     </ul>
                 </li>
             {% else %}
-                <li><a href="">Login</a></li>
+                <li><a href="{% url 'login' %}">Login</a></li>
                 <li><a href="">Register</a></li>
             {% endif %}
         </ul>
