--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -2,9 +2,8 @@
 
 {% block page_title %}Home{% endblock %}
 
-
 {% block main %}
-<div>
-  body
-</div>
+<div class="container">
+    <h1>Home page</h1>
+</div><!--container-->
 {% endblock main %}
