--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  
   {% block meta %}
   {% endblock meta %}
 
@@ -21,6 +22,8 @@
 
 <body>
   {% include 'navbar.html' %}
+
+  {% include 'messages.html' %}
 
   {% block page_header %}
   {% endblock page_header %}
