--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,7 +17,7 @@
 
         <ul class="nav navbar-nav">
             <li><a href="">Browse Herbs</a></li>
-            <li><a href="">Natural Remedies</a></li>
+            <li><a href="{% url 'blog' %}">Natural Remedies</a></li>
         </ul>
 
         <form class="navbar-form navbar-left" role="search">
