--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -35,7 +35,7 @@
 
         </div><!-- panel-body -->
         <div class="panel-footer">
-            <p>Not registered yet? <a href="#">Register now!</a></a>
+            <p>Not registered yet? <a href="{% url 'register' %}">Register now!</a></a>
         </div><!--panel-footer-->
     </div><!-- panel -->
 
