--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-static-top">
+<nav class="navbar navbar-default navbar-fixed-top">
 <div class="container">
 
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -45,7 +45,7 @@
                 </li>
             {% else %}
                 <li><a href="{% url 'login' %}">Login</a></li>
-                <li><a href="">Register</a></li>
+                <li><a href="{% url 'register' %}">Register</a></li>
             {% endif %}
         </ul>
 
