--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -5,7 +5,9 @@
 {% endblock titleblock %}
 
 {% block page_header %}
+<center>
   <h1>Blog Posts</h1>
+</center>
 {% endblock page_header %}
 
 {% block main %}
@@ -16,6 +18,8 @@
           {% if data.image %}
             <img src='{{ data.image.url }}' class='image-responsive' />
           {% endif %}
+          <div class='caption'>
+            <h3><a href="{{ data.get_absolute_url }}"> {{ data.title|truncatechars:30 }} </a> </h3>
           <p>{{ data.content|truncatechars:100 }}</p>
         </div>
       </div>
