--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,11 @@
-<hr />
+
 <footer>
-  copyright (c) jadibuti
+<div class="well">
+<div class="container">
+
+    <p class="pull-left">Copyright &copy; {% now "Y" %}. <a href="{% url 'home' %}">Jadibuti</a></p>
+
+    <p class="pull-right">Developed by <a href="https://bitbucket.org/locus-prakriti">Prakriti</a>.</p>
+</div><!--container-->
+</div><!--well-->
 </footer>
