--- a/templates/register_form.html
+++ b/templates/register_form.html
@@ -18,31 +18,31 @@
                 
                 <!-- first_name -->
                 <div class="form-group">
-                    <label for="{{ form.first_name.id_for_label }}">{{ form.first_name.label }}</label>
+                    {{ form.first_name.label_tag }}
                     {{ form.first_name }}
                 </div>
 
                 <!-- last_name -->
                 <div class="form-group">
-                    <label for="{{ form.last_name.id_for_label }}">{{ form.last_name.label }}</label>
+                    {{ form.last_name.label_tag }}
                     {{ form.last_name }}
                 </div>
 
                 <!-- email -->
                 <div class="form-group">
-                    <label for="{{ form.email.id_for_label }}">{{ form.email.label }}</label>
+                    {{ form.email.label_tag }}
                     {{ form.email }}
                 </div>
 
                 <!-- username -->
                 <div class="form-group">
-                    <label for="{{ form.username.id_for_label }}">{{ form.username.label }}</label>
+                    {{ form.username.label_tag }}
                     {{ form.username }}
                 </div>
 
                 <!-- password -->
                 <div class="form-group">
-                    <label for="{{ form.password.id_for_label }}">{{ form.password.label }}</label>
+                    {{ form.password.label_tag }}
                     {{ form.password }}
                 </div>
 
