search implemented without ordering

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,6 @@
-<hr />
-<footer>
-  copyright (c) jadibuti
+<br />
+<footer class="footer">
+  <div class="container">
+      <p class="text-muted">copyright (c) jaributi 2016, all right reserved</p>
+    </div>
 </footer>
