--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -5,15 +5,17 @@
 {% endblock titleblock %}
 
 {% block main %}
-<div class="col-sm-6 col-sm-offset-3">
-  {{ data.image.url }}
+
+<div class="col-sm-12 col-sm-offset-2">
   {% if data.image %}
-  <img src="{{ data.image.url }}" class="image-responsive" />
+    <img src="{{ data.image.url }}" class="image-responsive" />
   {% endif %}
   <h1> {{ data.title }} <br/>
-    <small> {{ data.publish }}<br/></small</h1>
+    <small> post : {{ data.timestamp }} | updated : {{ data.updated|timesince }}
+    </small</h1>
   <hr/>
   <p>{{ data.content|linebreaks }}</p>
   <hr/>
 </div>
+
 {% endblock main %}
