--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,9 +20,13 @@
             <li><a href="{% url 'blog:list' %}">Natural Remedies</a></li>
         </ul>
 
-        <form class="navbar-form navbar-left" role="search">
+        <form class="navbar-form navbar-left" role="search" method="get" action="{{ BASE_DIR }}">
             <div class="input-group">
-                <input type="search" class="form-control" placeholder="Search">
+                <input type="search" class="form-control" placeholder="Search" name="q"
+                {% if request.GET.q %}
+                  value="{{ request.GET.q }}"
+                {% endif %}
+                >
                 <span class="input-group-btn">
                     <button class="btn btn-default" type="submit">
                         <span class="glyphicon glyphicon-search"></span>
