--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -1,60 +1,93 @@
 {% extends 'base.html' %}
 
-{% block titleblock %}
+{% block page_title %}
 {{ page_title }}
-{% endblock titleblock %}
+{% endblock page_title %}
 
 {% block page_header %}
-<center>
-  <h1>Blog Posts</h1>
-</center>
+<header class="vpad-sm">
+<div class="container">
+  <h1>Natural Remedies</h1>
+</div><!--container-->
+</header>
 {% endblock page_header %}
 
 {% block main %}
+<div class="container">
 
-{% if not data_list and request.GET.q %}
-  <div class="col-sm-10 col-sm-offset-2">
-    <h3>No Result Found</h3>
-  </div>
+{% if not posts and request.GET.q %}
+  <div class="row">
+    <div class="col-sm-10 col-sm-offset-2">
+      <h3>No Result Found</h3>
+    </div>
+  </div><!--row-->
 {% endif %}
 
-<div class="col-sm-12 col-sm-offset-2">
-  {% for data in data_list %}
-    <div class="row">
-      <div class="col-sm-6 ">
-        <div class="thumbnail">
-          {% if data.image %}
-          <a href="{{ data.get_absolute_url }}">
-            <img src='{{ data.image.url }}' class='img-responsive'>
+{% for post in posts %}
+  <div class="row">
+    <div class="thumbnail">
+      {% if post.image %}
+      <a href="{{ post.get_absolute_url }}">
+        <img src='{{ post.image.url }}' class='img-responsive'>
+      </a>
+      {% endif %}
+      <div class='caption'>
+        <h3><a href="{{ post.get_absolute_url }}"> {{ post.title|truncatechars:30 }} </a> </h3>
+        <small>Posted: {{ post.created }} Updated {{ post.updated|timesince }} ago</small>
+        <p>{{ post.content|truncatechars:100 }}</p>
+      </div><!--caption-->
+    </div><!--thumbnail-->
+  </div><!--row-->
+{% endfor %}
+
+
+{% if posts %}
+  <div class="row text-center">
+
+    <nav>
+      <ul class="pagination">
+        {% if posts.has_previous %}
+        <li>
+          <a href='?{{ page_var }}={{ posts.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}'>
+            <span class="glyphicon glyphicon-chevron-left" ></span>
           </a>
-          {% endif %}
-          <div class='caption'>
-            <h3><a href="{{ data.get_absolute_url }}"> {{ data.title|truncatechars:30 }} </a> </h3>
-            <small>post:{{ data.timestamp }} updated:{{ data.updated|timesince }}</small>
-          <p>{{ data.content|truncatechars:100 }}</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  {% endfor %}
+        <li>
+        {% else %}
+        <li class="disabled">
+          <a href="#">
+            <span class="glyphicon glyphicon-chevron-left" ></span>
+          </a>
+        <li>
+        {% endif %}
 
-  {% if data_list %}
+        {% for n in paginator.page_range %}
 
-  <div class="pager" >
-    {% if data_list.has_previous %}
+        <li class="{% if posts.number == n %}active{% endif %}">
+          <a href="?{{ page_var }}={{ n }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">
+            {{ n }}
+          </a>
+        </li>
 
-      <a href='?{{ page_request_var }}={{ data_list.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}'><span class="glyphicon glyphicon-chevron-left" ></span></a>
+        {% endfor %}
 
-    {% endif %}
+        {% if posts.has_next %}
+        <li>
+          <a href='?{{ page_var }}={{ posts.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}'>
+            <span class="glyphicon glyphicon-chevron-right" ></span>
+          </a>
+        </li>
+        {% else %}
+        <li class="disabled">
+          <a href="#">
+            <span class="glyphicon glyphicon-chevron-right" ></span>
+          </a>
+        </li>
+        {% endif %}
+      </ul>
+    </nav>
 
-    Page {{ data_list.number }} of {{ data_list.paginator.num_pages }}.
+  </div><!--row-->
+{% endif %}
 
-    {% if data_list.has_next %}
-      <a href='?{{ page_request_var }}={{ data_list.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}'><span class="glyphicon glyphicon-chevron-right" ></span></a>
-    {% endif %}
-  </div>
-
-  {% endif %}
-</div>
-
+</div><!--container-->
 {% endblock main %}
