--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load markdown_deux_tags %}
 
 {% block page_title %}
 {{ page_title }}
@@ -7,87 +8,95 @@
 {% block page_header %}
 <header class="vpad-sm">
 <div class="container">
-  <h1>Natural Remedies</h1>
+  <h1>{{ page_title }}</h1>
 </div><!--container-->
 </header>
 {% endblock page_header %}
 
 {% block main %}
 <div class="container">
+<div class="row">
 
-{% if not posts and request.GET.q %}
-  <div class="row">
-    <div class="col-sm-10 col-sm-offset-2">
-      <h3>No Result Found</h3>
-    </div>
-  </div><!--row-->
-{% endif %}
+  <div class="col-md-8">
+    {% if not posts and request.GET.q %}
+      <div class="row">
+      <div class="col-sm-12">
+        <h3>No Result Found</h3>
+      </div><!--col-->
+      </div><!--row-->
+    {% endif %}
 
-{% for post in posts %}
-  <div class="row">
-    <div class="thumbnail">
-      {% if post.image %}
-      <a href="{{ post.get_absolute_url }}">
-        <img src='{{ post.image.url }}' class='img-responsive'>
-      </a>
-      {% endif %}
-      <div class='caption'>
-        <h3><a href="{{ post.get_absolute_url }}"> {{ post.title|truncatechars:30 }} </a> </h3>
-        <small>Posted: {{ post.created }} Updated {{ post.updated|timesince }} ago</small>
-        <p>{{ post.content|truncatechars:100 }}</p>
-      </div><!--caption-->
-    </div><!--thumbnail-->
-  </div><!--row-->
-{% endfor %}
-
-
-{% if posts %}
-  <div class="row text-center">
-
-    <nav>
-      <ul class="pagination">
-        {% if posts.has_previous %}
-        <li>
-          <a href='?{{ page_var }}={{ posts.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}'>
-            <span class="glyphicon glyphicon-chevron-left" ></span>
+    {% for post in posts %}
+      <div class="row">
+        <div class="thumbnail">
+          {% if post.image %}
+          <a href="{{ post.get_absolute_url }}">
+            <img src='{{ post.image.url }}' class='img-responsive'>
           </a>
-        <li>
-        {% else %}
-        <li class="disabled">
-          <a href="#">
-            <span class="glyphicon glyphicon-chevron-left" ></span>
-          </a>
-        <li>
-        {% endif %}
+          {% endif %}
+          <div class='caption'>
+            <h3><a href="{{ post.get_absolute_url }}"> {{ post.title|truncatechars:30 }} </a> </h3>
+            <small>Posted on {{ post.created|date }}.</small>
+            <div>{{ post.summary }}</div>
+          </div><!--caption-->
+        </div><!--thumbnail-->
+      </div><!--row-->
+    {% endfor %}
 
-        {% for n in paginator.page_range %}
 
-        <li class="{% if posts.number == n %}active{% endif %}">
-          <a href="?{{ page_var }}={{ n }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">
-            {{ n }}
-          </a>
-        </li>
+    {% if posts %}
+      <div class="row text-center">
 
-        {% endfor %}
+        <nav>
+          <ul class="pagination">
+            {% if posts.has_previous %}
+            <li>
+              <a href='?{{ page_var }}={{ posts.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}'>
+                <span class="glyphicon glyphicon-chevron-left" ></span>
+              </a>
+            <li>
+            {% else %}
+            <li class="disabled">
+              <a href="#">
+                <span class="glyphicon glyphicon-chevron-left" ></span>
+              </a>
+            <li>
+            {% endif %}
 
-        {% if posts.has_next %}
-        <li>
-          <a href='?{{ page_var }}={{ posts.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}'>
-            <span class="glyphicon glyphicon-chevron-right" ></span>
-          </a>
-        </li>
-        {% else %}
-        <li class="disabled">
-          <a href="#">
-            <span class="glyphicon glyphicon-chevron-right" ></span>
-          </a>
-        </li>
-        {% endif %}
-      </ul>
-    </nav>
+            {% for n in paginator.page_range %}
 
-  </div><!--row-->
-{% endif %}
+            <li class="{% if posts.number == n %}active{% endif %}">
+              <a href="?{{ page_var }}={{ n }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">
+                {{ n }}
+              </a>
+            </li>
 
+            {% endfor %}
+
+            {% if posts.has_next %}
+            <li>
+              <a href='?{{ page_var }}={{ posts.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}'>
+                <span class="glyphicon glyphicon-chevron-right" ></span>
+              </a>
+            </li>
+            {% else %}
+            <li class="disabled">
+              <a href="#">
+                <span class="glyphicon glyphicon-chevron-right" ></span>
+              </a>
+            </li>
+            {% endif %}
+          </ul>
+        </nav>
+
+      </div><!--row-->
+    {% endif %}
+  </div><!--col-->
+
+  <div class="com-md-4">
+    <h3>Categories</h3>
+  </div><!--col-->
+
+</div><!--row-->
 </div><!--container-->
 {% endblock main %}
