--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,7 +20,7 @@
             <li><a href="{% url 'blog:list' %}">Natural Remedies</a></li>
         </ul>
 
-        <form class="navbar-form navbar-left" role="search" method="get" action="{{ BASE_DIR }}">
+        <form class="navbar-form navbar-left" role="search" method="get" action="{% url 'blog:list' %}">
             <div class="input-group">
                 <input type="search" class="form-control" placeholder="Search" name="q"
                 {% if request.GET.q %}
