--- a/templates/browse_herbs.html
+++ b/templates/browse_herbs.html
@@ -11,9 +11,15 @@
   <h1>Browse</h1>
 </div>
 </header>
-
 {% endblock page_header %}
 
 
 {% block main %}
+
+<div class="col-sm-8 col-sm-offset-2">
+<form method="POST">
+		
+</form>
+</div>
+
 {% endblock main %}
