--- a/static/jadibuti/css/default.css
+++ b/static/jadibuti/css/default.css
@@ -6,12 +6,18 @@ nav.navbar, .well {
     margin-bottom: 0;
 }
 
-.jumbotron, .alert, .btn, .panel, .form-control, .well, .dropdown-menu,
-.panel-heading, .panel-footer {
+.jumbotron, .alert, .btn, .panel, .form-control, .well, .dropdown-menu, .thumbnail,
+.panel-heading, .panel-footer,
+.list-group, .list-group-item, .list-group-item:first-child, .list-group-item:last-child {
     border-radius: 0;
 }
 
 .vpad {
     padding-top: 50px;
     padding-bottom: 50px;
+}
+
+.list-group-item {
+    border-left: none;
+    border-right: none;
 }
