--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -93,9 +93,43 @@
     {% endif %}
   </div><!--col-->
 
-  <div class="com-md-4">
-    <h3>Categories</h3>
-  </div><!--col-->
+<div class="col-md-4">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Categories</h3>
+    </div>
+    <div class="panel-body">
+
+          <!--
+            this is good if we have to add count post of each group
+
+          <ul class="list-group com-md-4">
+          {% for c in categories %}
+          <a href="#">
+            <li class="list-group-item">
+            <span class="badge">14</span>
+            {{ c.name }}
+            </li>
+            </a>
+          {% endfor %}
+          </ul>
+          -->
+
+      <div class="list-group">
+      {% for c in categories %}
+          <!--
+            for active item
+            <a href="#" class="list-group-item active">
+              {{ c.name }}
+            </a>
+          -->
+
+          <a href="#" class="list-group-item col-md-4 ">{{ c.name }}</a>
+      {% endfor %}
+      </div>
+    </div>
+  </div>
+</div>
 
 </div><!--row-->
 </div><!--container-->
