--- a/templates/herb_detail.html
+++ b/templates/herb_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
+{% load markdown_deux_tags %}
 
 {% block page_title %}
 
@@ -29,6 +30,5 @@
     </div><!--content-->
 
     <hr>
-    
 </div><!--container-->
 {% endblock main %}
