--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,40 +1,34 @@
 {% extends 'base.html' %}
-
-
 {% load markdown_deux_tags %}
+
 
 {% block page_title %}
 {{ post.title }}
-
 {% endblock page_title %}
 
-{% block page_header %}
-<header>
-<div class="container">
-    <h1>{{ post.title }}</h1>
-    <small>Posted on {{ post.created|date }}</small>
-    <hr>
-</div><!--container-->
-</header>
-{% endblock page_header %}
 
 {% block main %}
-<div class="container">
+<div class="container vpad">
+<div class="col-sm-10 col-sm-offset-1">
+
+    <header>
+        <h1>{{ post.title }}</h1>
+    </header>
+
+    <hr>
 
     {% if post.image %}
-    <img src="{{ post.image.url }}" class="image-responsive" />
+    <img src="{{ post.image.url }}" class="img-responsive" />
     <hr>
     {% endif %}
 
-    <div class="content">
-    {{ post.content|markdown }}
+    <div class="caption">
+        {{ post.content|markdown }}
+        <hr>
+        <footer class="pull-right"><em>Source: {{ post.source }}</em></footer>
+        <div class="clearfix"></div>
     </div><!--content-->
 
-    <hr>
-    <footer>
-        <p>Source: {{ post.source }}</p>
-    </footer>
-
-
+</div><!--col-->
 </div><!--container-->
 {% endblock main %}
