--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -4,6 +4,44 @@
 
 {% block main %}
 <div class="container">
-    <h1>Home page</h1>
+<div class="row">
+<div class="col-sm-10 col-sm-offset-1">
+	<div id='home_carousel' class="carousel slide" data-ride="carousel">
+		<ul class="carousel-indicators">
+		{% for i in d_range %}
+			<li data-target="#home_carousel" data-slide-to = "{{ i }}" class="{% if i == 0 %}active{% endif %}"></li>
+		{% endfor %}
+
+		</ul>
+
+		<div class="carousel-inner">
+				
+			{% for i,data in zipped_data %}
+			
+			<div class="item {% if i == 0 %}active{% endif %}">
+				
+				<img src="{{ data.image.url }}" class="image-responsive" style="height:300;" alt="{{ data.description|truncatechars:15 }}">
+
+				<div class="carousel-caption">
+					<h3>{{ data.caption }}</h3>
+					<p>{{ data.description }}</p>
+				</div>
+			</div>
+			{% endfor %}
+		</div>
+
+		<a href="#home_carousel" class="carousel-control" data-slide="prev">
+		<span class="icon-prev"></span>
+		</a>
+
+		<a href="#home_carousel" class="carousel-control" data-slide="next">
+		<span class="icon-next"></span>
+		</a>
+
+	</div>
+
 </div><!--container-->
+</div>
+</div>
+
 {% endblock main %}
