slide left/right button fixed

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -30,11 +30,11 @@
 			{% endfor %}
 		</div>
 
-		<a href="#home_carousel" class="carousel-control" data-slide="prev">
+		<a href="#home_carousel" class="left carousel-control" data-slide="prev">
 		<span class="icon-prev"></span>
 		</a>
 
-		<a href="#home_carousel" class="carousel-control" data-slide="next">
+		<a href="#home_carousel" class="right carousel-control" data-slide="next">
 		<span class="icon-next"></span>
 		</a>
 
