--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -70,7 +70,14 @@
           {% endif %}
 
           <div class='caption'>
-            <h3><a href="{{ post.get_absolute_url }}"> {{ post.title|truncatechars:30 }} </a> </h3>
+            <h3>
+              <a href="{{ post.get_absolute_url }}">{{ post.title|truncatechars:30 }}</a>
+              {% if post.reviews %}
+              <span class="label label-success pull-right">
+                <span class="glyphicon glyphicon-star"></span> {{ post.rating|floatformat:1 }}
+              </span>
+              {% endif %}
+            </h3>
             <p>{{ post.summary }}</p>
           </div><!--caption-->
         </div><!--thumbnail-->
