--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -14,15 +14,15 @@
 {% endblock page_header %}
 
 {% block main %}
-<!---
-{%for i in splitted_search_query %}
+
+<!---{%for i in splitted_search_query %}
 <h2>{{i}}</h2>
 {%endfor %} --->
 <div class="container">
 <div class="row">
   {% if query_list %}
     {% for i in query_list %}
-        <h2>{{i}}</h2> 
+<!---        <h2>{{i}}</h2> --->
       {% for k in i %}
       <div class="row">
       <div class="col-sm-12">
