--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -18,7 +18,7 @@
 <div class="row">
   
   <div class="col-md-8">
-    {% if not query_list %}
+    {# {% if not query_list %} ### This line didn't show 'no results' when there were no results #} 
       {% if not posts and request.GET.q %}
         <div class="row">
           <div class="col-sm-12">
@@ -26,7 +26,7 @@
           </div><!--col-->
         </div><!--row-->
       {% endif %}
-    {% endif %}
+    {# {% endif %} #}
 
     {% for post in posts %}
       <div class="row">
