added icon to website

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,8 @@
 
   <title>{% block page_title %}{% endblock page_title %} | Jadibuti</title>
 
+  <link rel="icon" type="image/png" href="{% static 'jadibuti/img/icon.png' %}">
+
   <!-- bootstrap css -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="{% static 'jadibuti/css/default.css' %}">
