--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -119,7 +119,7 @@
           <a class="list-group-item" href="{% url 'blog:list' %}">All
             <span class="label label-default pull-right">{{ total_posts }}</span></a>
         {% for c in categories %}
-          <a class="list-group-item{% if category_selected == c.id %} active{% endif %}"
+          <a class="list-group-item{% if c.id == category_selected %} active{% endif %}"
             href="?c={{ c.id }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">
             {{ c.name }} <span class="label label-default pull-right">{{ c.post_set.all|length }}</span>
           </a>
