herb shop model added

--- a/templates/herb_detail.html
+++ b/templates/herb_detail.html
@@ -26,7 +26,7 @@
     {% endif %}
 
     <div class="content">
-    {{ post.content|markdown }}
+    {{ herb.description|markdown }}
     </div><!--content-->
 
     <hr>
