--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -41,6 +41,7 @@
           {% endif %}
 
           <div class='caption'>
+
             <h3>
               <a href="{{ post.get_absolute_url }}">{{ post.title|truncatechars:30 }}</a>
               {% if post.reviews %}
@@ -49,7 +50,17 @@
               </span>
               {% endif %}
             </h3>
+
+            {% if post.herbs %}
+            <p>
+              {% for h in post.herbs.all %}
+                <a href="{{ h.get_absolute_url }}"><span class="label label-default">{{ h.eng_name }}</span></a>
+              {% endfor %}
+            </p>
+            {% endif %}
+
             <p>{{ post.summary }}</p>
+
           </div><!--caption-->
         </div><!--thumbnail-->
 
