--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -9,6 +9,30 @@
 
 {% block main %}
 
+
+<div class="container">
+<div class="jumbotron vpad" style="background:url({% static 'jadibuti/img/bg-herbs.jpg' %}) no-repeat center center; border-radius:0;">
+<div class="text-center">
+
+	<h1>Welcome to the nature!</h1>
+
+	<h3>Search for any health problem and we'll try to find a natural solution for you.</h3>
+
+	<hr>
+
+	<form class="form-inline" action="{% url 'blog:list' %}" method="GET" role="search">
+		<input type="text" name="q" placeholder="Try searching 'acne', 'back pain', etc."
+			class="form-control input-lg" size="50">
+		<button type="submit" class="btn btn-default btn-lg">Search</button>
+	</form>
+
+</div><!--center-->
+</div><!--jumbotron-->
+</div><!--container-->
+
+<br/>
+
+{% if carousel_data %}
 <section id="carouse">
 <div class="container">
 	<div class="row">
@@ -50,26 +74,6 @@
 	</div><!--row-->
 </div><!--container-->
 </section><!--carousel-->
-
-
-<div class="container">
-<div class="jumbotron vpad" style="background:url({% static 'jadibuti/img/bg-herbs.jpg' %}) no-repeat center center; border-radius:0;">
-<div class="text-center">
-
-	<h1>Welcome to the nature!</h1>
-
-	<h3>Search for any health problem and we'll try to find a natural solution for you.</h3>
-
-	<hr>
-
-	<form class="form-inline" action="{% url 'blog:list' %}" method="GET" role="search">
-		<input type="text" name="q" placeholder="Try searching 'acne', 'back pain', etc."
-			class="form-control input-lg" size="50">
-		<button type="submit" class="btn btn-default btn-lg">Search</button>
-	</form>
-
-</div><!--center-->
-</div><!--jumbotron-->
-</div><!--container-->
+{% endif %}
 
 {% endblock main %}
