--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -4,12 +4,16 @@
 {% block page_title %}{{ page_title }}{% endblock %}
 
 {% block styles %}
-<link rel="stylesheet" href="{% static 'jadibuti/css/home_page.css' %}">
+	<link rel="stylesheet" href="{% static 'jadibuti/css/home_page.css' %}">
 {% endblock styles %}
+
+{% block bg %}
+	{% static 'jadibuti/img/bg-herbs.jpg' %}
+{% endblock bg %}
 
 {% block main %}
 
-<div class="jumbotron vpad" style="background:url({% static 'jadibuti/img/bg-herbs.jpg' %}) no-repeat center center; border-radius:0; background-size: cover;">
+<div class="jumbotron">
 <div class="container">
 <div class="text-center">
 
@@ -22,7 +26,9 @@
 	<form class="form-inline" action="{% url 'blog:list' %}" method="GET" role="search">
 		<input type="text" name="q" placeholder="Try searching 'acne', 'back pain', etc."
 			class="form-control input-lg" size="50">
-		<button type="submit" class="btn btn-default btn-lg">Search</button>
+		<button type="submit" class="btn btn-default btn-lg">
+			<span class="glyphicon glyphicon-search"></span> Search
+		</button>
 	</form>
 
 </div><!--center-->
