--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -1,8 +1,15 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 
 {% block page_title %}Login{% endblock page_title %}
 
+{% block bg %}
+    {% static 'jadibuti/img/bg-leaves.jpg' %}
+{% endblock bg %}
+
 {% block main %}
+
+<section class="vpad">
 <div class="container vpad">
 <div class="row">
 <div class="col-sm-offset-4 col-sm-4">
@@ -42,4 +49,5 @@
 </div><!--col-->
 </div><!--row-->
 </div><!--container-->
+</section>
 {% endblock main %}
