--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -3,13 +3,20 @@
 
 
 {% block page_title %}
-{{ post.title }}
+    {{ post.title }}
 {% endblock page_title %}
+
+
+{% block bg %}
+{% if post.image %}
+    {{ post.image.url }}
+{% endif %}
+{% endblock bg %}
 
 
 {% block main %}
 <div class="container vpad">
-<div class="col-sm-10 col-sm-offset-1">
+<div class="col-sm-10 col-sm-offset-1 white-bg" style="padding:30px;">
 
     <header>
         <h1>{{ post.title }}
@@ -22,11 +29,6 @@
     </header>
 
     <hr>
-
-    {% if post.image %}
-    <img src="{{ post.image.url }}" class="img-responsive" />
-    <hr>
-    {% endif %}
 
     {% if post.herbs %}
     <div class="herbs">
