--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -1,14 +1,20 @@
 {% extends 'base.html' %}
 {% load markdown_deux_tags %}
+{% load staticfiles %}
 
 {% block page_title %}
-{{ page_title }}
+  {{ page_title }}
 {% endblock page_title %}
+
+{% block bg %}
+  {% static 'jadibuti/img/bg-yoga.jpg' %}
+{% endblock bg %}
+
 
 {% block page_header %}
 <header class="vpad-sm">
 <div class="container">
-  <h1>{{ page_title }}</h1>
+  <h1 class="white-text text-shadow">{{ page_title }}</h1>
 </div><!--container-->
 </header>
 {% endblock page_header %}
