added forgot password? button

--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -36,7 +36,13 @@
                 </div>
 
                 <!-- submit -->
-                <button type="submit" class="btn btn-lg btn-primary btn-block">Login</button>
+                <div>
+                    <button type="submit" class="btn btn-lg btn-primary btn-block">Login</button>
+                </div>
+
+                <div class="text-center">
+                    <a href="#">Forgot password?</a>
+                </div>
 
             </form>
 
