--- a/templates/browse_herbs.html
+++ b/templates/browse_herbs.html
@@ -17,7 +17,7 @@
 
 <div class="container">
 <div class="row">
-<div class="col-md-8">
+<div class="col-sm-8">
 <div class="panel panel-default">
   {% for herb in herbs %}
   	<div class="thumbnail">
@@ -42,7 +42,7 @@
     </div><!--panel-heading-->
     <div class="panel-body" style="padding:0;">
       <ul class="list-group" style="margin:0;">
-          <a class="list-group-item" href="{% url 'browse:browse' %}">All
+          <a class="list-group-item" href="{% url 'browse:herbs' %}">All
             <span class="label label-default pull-right">{{ total_herbs }}</span></a>
         {% for count,cat in count_categories %}
           <a class="list-group-item" href="#">
