--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,7 +16,8 @@
     <div class="collapse navbar-collapse" id="nav1">
 
         <ul class="nav navbar-nav">
-            <li><a href="{% url 'browse:browse'  %}">Browse Herbs</a></li>
+            <li><a href="{% url 'browse:herbs'  %}">Browse Herbs</a></li>
+            <li><a href="{% url 'browse:yogas' %}">Yoga</a></li>
             <li><a href="{% url 'blog:list' %}">Natural Remedies</a></li>
         </ul>
 
