merging, added yoga

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,7 +20,7 @@
             <li class="{% if page_title == 'Herbs' %}active {% endif %}">
                 <a href="{% url 'browse:herbs'  %}">Herbs</a>
             </li>
-            <li class="{% if page_title == 'Yogas' %}active{% endif %}">
+            <li class="{% if page_title == 'Yoga' %}active{% endif %}">
                 <a href="{% url 'browse:yogas' %}">Yoga</a>
             </li>
             <li class="{% if page_title == 'Natural Remedies' %}active {% endif %}">
