--- a/templates/browse_herbs.html
+++ b/templates/browse_herbs.html
@@ -21,8 +21,8 @@
 
 <div class="container">
 <div class="row">
-<div class="col-sm-8">
-<div class="panel panel-default">
+  
+  <div class="col-sm-8">
 
   {% for herb in herbs %}
   	<div class="thumbnail">
@@ -38,29 +38,27 @@
     </div>
   {% endfor %}
 
+  </div><!--col-->
+
+
+  <div class="col-sm-4">
+  <div class="panel panel-default">
+      <div class="panel-heading">
+        Categories
+      </div><!--panel-heading-->
+      <div class="panel-body" style="padding:0;">
+        <ul class="list-group" style="margin:0;">
+            <a class="list-group-item" href="{% url 'browse:herbs' %}">All
+              <span class="label label-default pull-right">{{ total_herbs }}</span></a>
+          {% for cat in categories %}
+            <a class="list-group-item" href="#">
+            {{ cat.name }} <span class="label label-default pull-right">{{ cat.category|length }}</span>
+            </a>
+          {% endfor %}
+        </ul>
+      </div><!--panel-body-->
   </div><!--panel-->
-}
-</div><!--column-1-->
-
-
-<div class="col-md-4">
-<div class="panel panel-default">
-    <div class="panel-heading">
-      Categories
-    </div><!--panel-heading-->
-    <div class="panel-body" style="padding:0;">
-      <ul class="list-group" style="margin:0;">
-          <a class="list-group-item" href="{% url 'browse:herbs' %}">All
-            <span class="label label-default pull-right">{{ total_herbs }}</span></a>
-        {% for cat in categories %}
-          <a class="list-group-item" href="#">
-          {{ cat.name }} <span class="label label-default pull-right">{{ cat.category|length }}</span>
-          </a>
-        {% endfor %}
-      </ul>
-    </div><!--panel-body-->
-</div><!--panel-->
-</div><!--column 2-->
+  </div><!--column 2-->
 
 </div><!--row-->
 </div><!--container-->
